# Quant-2.0

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
dashboard/: .dockerignore  Dockerfile  README.md  app.py  config.py  docker-compose.dev.yml  docker-compose.yml  requirements.txt
dashboard/assets/: style.css
dashboard/components/: drawdown_chart.py  equity_chart.py  heatmap.py  kpi_card.py  navbar.py  trade_table.py
dashboard/data/: cache.py  loader.py
dashboard/k8s/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
dashboard/pages/: backtest.py  models.py  overview.py  positions.py  risk.py  system.py
docs/: ALGORITHMS.md  ARCHITECTURE.md
quant/: __init__.py
quant/backtest/: __init__.py  engine.py  metrics.py
quant/config/: __init__.py  settings.py
quant/core/: __init__.py  self_trainer.py  state_manager.py
quant/data/: __init__.py  dataset.py  provider.py  storage.py
quant/execution/: __init__.py  live.py  paper.py
quant/features/: __init__.py  changepoint.py  information_geometry.py  pipeline.py  technical.py  time_features.py
quant/models/: __init__.py  adversarial_regime.py  base.py  causal_transformer.py  entropic_diffusion.py  hamiltonian_ode.py  itransformer.py  losses.py  lstm.py  momentum_transformer.py  rl_portfolio.py  schrodinger_transformer.py  topological_attention.py  trainer.py  transformer.py
quant/portfolio/: __init__.py  optimizer.py  position.py  (+1 more)
scripts/: download_data.py  live_trade.py  run_backtest.py  train_model.py
tests/: conftest.py
(+63 files in other folders)
