[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant"
version = "2.0.0"
description = "Self-learning Multi-Asset Quant Trading System"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "yfinance>=0.2.30",
    "ccxt>=4.0.0",
    "plotly>=5.18.0",
    "pyarrow>=14.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
live = [
    "alpaca-trade-api>=3.0.0",
    "websocket-client>=1.6.0",
]
dashboard = [
    "dash>=2.15.0",
    "dash-bootstrap-components>=1.5.0",
    "gunicorn>=22.0.0",
]

[tool.setuptools.packages.find]
include = ["quant*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["quant"]
omit = ["tests/*", "scripts/*"]
